# thrust-benchmarks

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  README.md  bench.sh  perf.csv  run.sh
cublas/: CMakeLists.txt
cublas/src/: cublas_gemm.cu
cuda/: CMakeLists.txt
cuda/include/: cuda_gemm_utils.cuh  cuda_kernels.cuh
cuda/src/: cuda_bencher.cu  cuda_gemm.cc  cuda_gemm_kernel.cu  kernel_profiler.cu
cutlass/: CMakeLists.txt
cutlass/src/: cutlass_gemm.cu
include/: benchers.h  checks.cuh  logging.h  parser.hpp  perfostep.hpp  thrust_kernels.cuh
jax/: jax_mm.py
matx/: CMakeLists.txt
matx/src/: main.cu
pallas/: pallas_mm.py
src/: main.cpp  thrust_cpu.cpp
standard/: CMakeLists.txt
standard/src/: cpu_bencher.cpp
thrust/: CMakeLists.txt
thrust/src/: thrust_bencher.cu.cpp  thrust_mm.cu
thrust/thrust-cpu/: CMakeLists.txt
thrust/thrust-gpu/: CMakeLists.txt
